added metrics code