@@ -105,7 +105,8 @@ public class AssortedMethods {
     public static String toFullBinaryString(int a) {
         String s = "";
         for (int i = 0; i < 32; i++) {
-            Integer lsb = new Integer(a & 1);
+            //Integer lsb = new Integer(a & 1);
+            Integer lsb = Integer.valueOf(a & 1);
             s = lsb.toString() + s;
             a = a >> 1;
         }
